# FT232H_bitbang

./: LICENSE  README.md  meson.build
src/: main.c
